# helloTriangle

./: .gitignore  CMakeLists.txt  JSInterface.cpp  LICENSE  README.md  glv8.cc  main.cpp  v8go.cc
.github/DISCUSSION_TEMPLATE/: one_pager.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/PULL_REQUEST_TEMPLATE/: bug_pull_request_template.yaml  feature_pull_request_template.yml  pull_request_template.md
include/: JSInterface.h  glv8.h  util.h
